# manga-gen

./: .gitignore  LICENSE  README.md  pyproject.toml  run_examples.sh
docs/: DSL.md  DSL_ja.md
examples/: 4_coma.manga  4_coma_horizontal.manga  a3_page.manga  action.manga  action_rtl.manga  dynamic_overlap.manga  grid.manga  gutter_colored.manga  horizontal.manga  horizontal_columns.manga  large.manga  margin.manga  nested.manga  og-image.manga  selective_borders.manga  simple.manga  slanted.manga  slanted_complicated.manga  slanted_complicated_rtl.manga  slanted_group.manga  test_comment.manga  with_image.manga
src/manga_gen/: __init__.py  ast.py  cli.py  errors.py  grammar.lark  parser.py
src/manga_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/manga_gen/layout/: __init__.py  slicing.py
src/manga_gen/renderer/: raster.py  svg.py
